--- a/templates/outcome.html
+++ b/templates/outcome.html
@@ -4,7 +4,7 @@
     <title>Google Solution Challenge</title>
     <style>
       body {
-        background-image: url("static/EcoAR.png");
+        background-color:#ffff;
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
